--- a/stm32_interfaces_ethernet.ioc
+++ b/stm32_interfaces_ethernet.ioc
@@ -26,7 +26,8 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -35,10 +36,14 @@ Mcu.Pin10=PC5
 Mcu.Pin11=PB0
 Mcu.Pin12=PB10
 Mcu.Pin13=PD15
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PC3
 Mcu.Pin5=PA4
@@ -46,7 +51,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=17
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -64,6 +69,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=ETH_CS
 PA4.GPIO_PuPd=GPIO_NOPULL
@@ -81,6 +92,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=ETH_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=LCD_DC
 PB0.GPIO_PuPd=GPIO_PULLUP
@@ -152,7 +165,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=18000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -199,6 +212,8 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F411E-DISCO
